build_log_config.txt
> Task :clean

> Task :compileJava FAILED
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java:42: error: no suitable constructor found for OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder)
        return new OpenAiApi(baseUrl, apiKey, RestClient.builder()
               ^
    constructor OpenAiApi.OpenAiApi(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,String,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,String,MultiValueMap<String,String>,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
      (actual and formal argument lists differ in length)
    constructor OpenAiApi.OpenAiApi(String,ApiKey,MultiValueMap<String,String>,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java:54: error: cannot find symbol
                .withModel("gpt-5")
                ^
  symbol:   method withModel(String)
  location: class Builder
Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/bokducke/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java uses or overrides a deprecated API.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java:42: error: no suitable constructor found for OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder)
          return new OpenAiApi(baseUrl, apiKey, RestClient.builder()
                 ^
      constructor OpenAiApi.OpenAiApi(String) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,String) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,String,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,String,MultiValueMap<String,String>,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
        (actual and formal argument lists differ in length)
      constructor OpenAiApi.OpenAiApi(String,ApiKey,MultiValueMap<String,String>,String,String,org.springframework.web.client.RestClient.Builder,org.springframework.web.reactive.function.client.WebClient.Builder,ResponseErrorHandler) is not applicable
        (actual and formal argument lists differ in length)
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\OpenAiConfig.java:54: error: cannot find symbol
                  .withModel("gpt-5")
                  ^
    symbol:   method withModel(String)
    location: class Builder
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
2 actionable tasks: 2 executed
